--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ serde_arrays = { version = "0.1.0", optional = true }
 hex = { version = "0.4", optional = true, default-features = false, features = ["alloc", "serde"] }
 blake2b_simd = "1"
 maybe-rayon = { version = "0.1.0", default-features = false }
+elliptic-curve = { version = "0.13.5", default-features = false, features = ["hazmat", "sec1"] }
+primeorder = { version = "0.13", optional = true }
 
 [features]
 default = ["bits", "multicore"]
